--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,42 +13,25 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Aplicacion_final"
         tools:targetApi="31">
-
+        <activity
+            android:name=".producto.CrearProducto"
+            android:exported="false" />
         <!-- Actividad de Pantalla de Carga -->
         <activity
             android:name=".pantalla_carga"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity
-            android:name=".LoginActivity">
-
-        </activity>
-
-        <!-- Actividad de Registro de Almacén -->
-        <activity
-            android:name=".RegistroActivity" >
-        </activity>
-
-        <!-- Actividad de Inicio de Sesión (Almacen) -->
-        <activity
-            android:name=".LoginAlmacenActivity">
-        </activity>
-
-        <!-- Actividad de Registro de Almacén -->
-        <activity
-            android:name=".RegistroAlmacenActivity">
-        </activity>
-
-        <!-- Actividad Principal -->
-        <activity
-            android:name=".MainActivity">
-        </activity>
-
+        <activity android:name=".usuario.LoginUsuarioActivity"></activity> <!-- Actividad de Registro de Almacén -->
+        <activity android:name=".usuario.RegistroUsuarioActivity"></activity> <!-- Actividad de Inicio de Sesión (Almacen) -->
+        <activity android:name=".almacen.LoginAlmacenActivity"></activity> <!-- Actividad de Registro de Almacén -->
+        <activity android:name=".almacen.RegistroAlmacenActivity"></activity> <!-- Actividad Principal -->
+        <activity android:name=".usuario.MainActivityUsuario"></activity>
+        <activity android:name=".almacen.MainActivityAlmacen"></activity>
     </application>
 
 </manifest>
